<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExportImportFragment">


    <EditText
        android:id="@+id/editTextDestination_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertDestination"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/button_export_E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_export_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exportD"
        app:layout_constraintBottom_toTopOf="@id/editTextSource_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextDestination_export" />

    <EditText
        android:id="@+id/editTextSource_export"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insertSource"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/button_export_I"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_export_E" />

    <Button
        android:id="@+id/button_export_I"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/importD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextSource_export" />

</androidx.constraintlayout.widget.ConstraintLayout>