<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.historialproductos.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">


        <action
            android:id="@+id/action_FirstFragment_to_FragmentRegister"
            app:destination="@id/FragmentRegister" />

        <action
            android:id="@+id/action_FirstFragment_to_FragmentSearch"
            app:destination="@+id/FragmentSearch" />

        <action
            android:id="@+id/action_FirstFragment_to_FragmentExportImport"
            app:destination="@+id/FragmentExportImport"/>


        <!--
        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        -->
    </fragment>

    <fragment
        android:id="@+id/FragmentRegister"
        android:name="com.example.historialproductos.RegisterFragment"
        android:label="@string/fragment_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_FragmentRegister_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/FragmentSearch"
        android:name="com.example.historialproductos.SearchFragment"
        android:label="@string/fragment_search"
        tools:layout="@layout/fragment_search">

        <action
            android:id="@+id/action_FragmentSearch_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/FragmentExportImport"
        android:name="com.example.historialproductos.ExportImportFragment"
        android:label="@string/fragment_export_import"
        tools:layout="@layout/fragment_export_import">
        <action
            android:id="@+id/action_FragmentExportImport_to_FirstFragment"
            app:destination="@+id/FirstFragment"/>

    </fragment>

    <!--
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.historialproductos.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    -->

</navigation>