<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/button_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@id/button_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45" />

    <Button
        android:id="@+id/button_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="List"
        app:layout_constraintBottom_toTopOf="@+id/button_export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45" />

    <Button
        android:id="@+id/button_export"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/export_import"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_list"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".45" />

</androidx.constraintlayout.widget.ConstraintLayout>